Fix #5688: overlapping text near exp/gems in CoCo victory modal
Truncates instead of wrapping.

Also lower Korean font size there to be less likely to overflow.

--- a/ozaria/site/styles/play/level/modal/hero-victory-modal.sass
+++ b/ozaria/site/styles/play/level/modal/hero-victory-modal.sass
@@ -258,14 +258,6 @@
 
   //- Footer
 
-  #lenovo-link
-    width: 100%
-    padding-top: 20px
-
-  #sweepstakes-entry
-    height: 60px
-    display: inline-block
-
   #totals
     width: 709px
     height: 96px
@@ -312,6 +304,10 @@
         font-size: 18px
         margin-top: 13px
         line-height: 18px
+        max-width: 210px
+        white-space: nowrap
+        overflow: hidden
+        text-overflow: ellipsis
 
       .xp-bar-outer
         background-color: rgb(40, 33, 22)
@@ -381,6 +377,25 @@
 
   .sign-up-poke
     width: 430px
+
+    .sign-up-blurb
+      width: 175px
+      font-family: $headings-font-family
+      font-weight: bold
+      text-transform: uppercase
+      font-size: 18px
+      line-height: 18px
+      text-align: left
+      float: left
+      margin: 5px 0 0 5px
+      color: rgb(160, 150, 126)
+
+    .sign-up-button
+      width: 250px
+      height: 60px
+      line-height: 30px
+      margin: 0
+      float: left
 
   .subscribe-button
     width: 209px
@@ -580,6 +595,6 @@ body[lang='ru'], body[lang^='es-ES'], body[lang^='it'], body[lang^='hu'], body[l
   #hero-victory-modal #totals .total-wrapper .total-label
     font-size: 12px
 
-body[lang^='nl'], body[lang^='de'], body[lang^='he']
+body[lang^='nl'], body[lang^='de'], body[lang^='he'], body[lang^='ko']
   #hero-victory-modal #totals .total-wrapper .total-label
     font-size: 15px
